# dspa-viz-py

./: LICENSE  README.md  pyproject.toml
data/: 170721_uniprot_Sce_HRMkit_PK_standards_plusASN.fasta
dspa_viz_py/: __init__.py  barcode.py
nbs/: example.ipynb
tests/: test_barcode.py
