[tool.poetry]
name = "dspa-viz-py"
version = "0.1.0"
description = "Visualization library for the DSPA atlas"
authors = ["Elena Krismer <70535771+elena-krismer@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.2.0"
numpy = "1.26.3"
matplotlib = "3.8.2"
seaborn = "0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
